# dream

./: README.md
code_design_mode/: CMakeLists.txt
code_design_mode/AbstractFactory/: CMakeLists.txt  Factory.cpp  Factory.h  Product.cpp  Product.h  main.cpp
code_design_mode/Adapter/: CMakeLists.txt  Client.cpp  Client.h  ClientInterface.cpp  ClientInterface.h  Service.cpp  Service.h  main.cpp
code_design_mode/Bridge/: Abstraction.cpp  Abstraction.h  CMakeLists.txt  Implementation.cpp  Implementation.h  main.cpp
code_design_mode/Builder/: CMakeLists.txt  Computer.cpp  Computer.h  ComputerBuilder.cpp  ComputerBuilder.h  Director.cpp  Director.h  main.cpp
code_design_mode/Command/: CMakeCache.txt  CMakeLists.txt  Chef.cpp  Chef.h  Command.cpp  Command.h  Makefile  Waiter.cpp  Waiter.h  cmake_install.cmake  main.cpp
code_design_mode/Composite/: CMakeLists.txt  Component.cpp  Component.h  Composite.cpp  Composite.h  main.cpp
code_design_mode/Decorator/: CMakeLists.txt  Component.cpp  Component.h  main.cpp
code_design_mode/Facade/: CMakeLists.txt  Facade.cpp  Facade.h  SubSystem.cpp  SubSystem.h  main.cpp
code_design_mode/Flyweight/: CMakeLists.txt  Flyweight.cpp  Flyweight.h  FlyweightFactory.cpp  FlyweightFactory.h  Forest.cpp  Forest.h  Tree.cpp  Tree.h  main.cpp
code_design_mode/Mediator/: CMakeLists.txt  Colleague.cpp  Colleague.h  Mediator.cpp  Mediator.h  main.cpp
code_design_mode/Memento/: CMakeLists.txt  Caretaker.cpp  Caretaker.h  Memento  Memento.cpp  Memento.h  Originator.cpp  Originator.h  main.cpp
code_design_mode/Observer/: CMakeLists.txt  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
code_design_mode/Prototype/: CMakeLists.txt  Prototype.cpp  Prototype.h  main.cpp
code_design_mode/Proxy/: CMakeCache.txt  CMakeLists.txt  Makefile  MySystem.cpp  MySystem.h  cmake_install.cmake  main.cpp  mySystemProxy.cpp  mySystemProxy.h
code_design_mode/state/: Context.h  (+6 more)
(+35 files in other folders)
